# keelhouse

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  ERRORS.md  PARKED.md  PRD.md  README.md  ROADMAP.md  STATE.md  flow-report.html  roadmap.html  roadmap.json
app/: README.md  index.html  package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: agent_hooks.rs  chat_harness.rs  chat_store.rs  claude_adapter.rs  connection_secrets.rs  lib.rs  main.rs  project_creation.rs  workspace_checkpoints.rs
demo/: cockpit-demo.html  keelhouse-chrome-demo.html  keelhouse-local-studio-chrome-demo.html
docs/: README.md  accessibility-basics.md  activity-drawers.md  agent-activity-log.md  agent-activity-timeline.md  agent-activity.md  agent-hooks.md  agent-orchestration.md  ai-connections.md  app-actions-minimal.md  blind-audit-chrome-roadmap-2026-07-11.md  blind-audit-git-actions-lite-2026-07-09.md  blind-audit-vanta-harness-2026-07-08.md  browser-preview.md  chat-composer-context.md  chat-forks-and-checkpoints.md  chat-history-discovery.md  chrome-contract.md  chrome-delta-audit.md  chrome-polish-system.md  chrome-ui-polish.md  claude-structured-adapter.md  code-structure.md  command-palette.md  composer-harness-research.md  composer-harness.md  context-menus.md  demo-feature-parity-audit-2026-07-14.md  diff-view.md  editor-terminal-parity.md  git-actions-lite.md  git-status.md  harness-contract.md  icon-system.md  iconography.md  integrations-scope.md  (+22 more)
(+396 files in other folders)
