[package]
name = "agent-cli"
version = "0.1.0"
description = "Lean macOS shell for real Claude/Codex terminal agents"
authors = ["Jason Poindexter"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_cli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
libghostty-vt = "0.2.0"
portable-pty = "0.9.0"
ignore = "0.4.27"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-notification = "2.3.3"
libc = "0.2"
image = { version = "0.25.10", default-features = false, features = ["png"] }
